--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,32 +1,3 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-async-timeout==4.0.2
-attrs==21.2.0
-certifi==2021.10.8
-charset-normalizer==2.0.9
-cycler==0.11.0
-et-xmlfile==1.1.0
-fonttools==4.28.5
-frozenlist==1.2.0
-future==0.18.2
-idna==3.3
-kiwisolver==1.3.2
 line-bot-sdk==2.0.1
-lxml==4.7.1
-matplotlib==3.5.1
-multidict==5.2.0
-numpy==1.21.5
-openpyxl==3.0.9
-packaging==21.3
-Pillow==8.4.0
-progressbar2==3.55.0
-pyparsing==3.0.6
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-utils==2.5.6
-requests==2.26.0
-six==1.16.0
-urllib3==1.26.7
-yarl==1.7.2
-gunicorn==19.7.1
+gunicorn
 
